<resources>
    <string name="app_name">FastCalculation</string>
    <string name="player_name">Player Name</string>
    <string name="rounds">Rounds</string>
    <string name="round_interval">Round Interval</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="lets_go">Let\'s go</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="restart_game">Restart Game</string>
    <string name="exit">Exit</string>
    <string-array name="rounds">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="play">Play</string>
    <string name="points">Points</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play again?</string>
</resources>